Revert "Merge branch 'main' of https://github.com/rr1706/Command2020"
This reverts commit 3c625d5560ccfe38c727114bc9638b5c6116ffd8, reversing
changes made to fbe08949f27774dd7a29d20f0ac9db223495c561.

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
         String frcYear = '2021'
         File frcHome
         if (OperatingSystem.current().isWindows()) {
-            String publicFolder = System.getenv('PULIC')
+            String publicFolder = System.getenv('PUBLIC')
             if (publicFolder == null) {
                 publicFolder = "C:\\Users\\Public"
             }
